@@ -1,21 +1,24 @@
 package it.polito.server.model.dao.postgres;
 
+import it.polito.server.model.ConnectionException;
 import it.polito.server.model.Position;
 import it.polito.server.model.dao.PositionsDAO;
 import it.polito.server.model.User;
+import javafx.geometry.Pos;
 import org.postgresql.geometric.PGpoint;
 
 import javax.ws.rs.InternalServerErrorException;
 import java.sql.*;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 public class PostgresPositionDAO implements PositionsDAO {
 
   @Override
-  public void addPositions(User user, List<Position> positions) {
+  public void addPositions(User user, List<Position> positions) throws ConnectionException {
     String query = "INSERT INTO positions (t_stamp, curr_location, user_id)" +
-                   "VALUES(?, POINT(?, ?), ?)";
+            "VALUES(?, POINT(?, ?), ?)";
     try (Connection connection = PostgresConnection.getConnection()) {
       connection.setAutoCommit(false);
       try (PreparedStatement ps = connection.prepareStatement(query)) {
@@ -27,47 +30,51 @@ public class PostgresPositionDAO implements PositionsDAO {
           ps.executeUpdate();
         }
         connection.commit();
-      } catch (Exception e) {
+      } catch (SQLException e) {
         connection.rollback();
-        e.printStackTrace();
+        throw e;
       }
-    } catch (SQLException e) {
-      e.printStackTrace();
+    } catch (Exception e) {
+      throw new ConnectionException(e);
     }
   }
 
 
   @Override
-  public Position fetchLast(User user) {
+  public Position fetchLast(User user) throws ConnectionException {
     String query = "SELECT t_stamp, curr_location, user_id FROM positions WHERE user_id = ? ORDER BY t_stamp DESC LIMIT 1";
-    return this.fetch(user, query).get(0);
+    try{
+      return ((LinkedList<Position>) this.fetch(user, query)).getFirst();
+    }catch(NoSuchElementException e){
+      return null;
+    }
   }
 
   @Override
-  public List<Position> fetchAll(User user) {
+  public List<Position> fetchAll(User user) throws ConnectionException {
     String query = "SELECT t_stamp, curr_location, user_id FROM positions WHERE user_id = ?";
     return this.fetch(user, query);
   }
 
   @Override
-  public List<Position> fetchSince(User user, long since) {
+  public List<Position> fetchSince(User user, long since) throws ConnectionException {
     String query = "SELECT t_stamp, curr_location, user_id FROM positions WHERE user_id = ? AND t_stamp > ?";
     return this.fetch(user, query, since);
   }
 
   @Override
-  public List<Position> fetchUpTo(User user, long upTo) {
+  public List<Position> fetchUpTo(User user, long upTo) throws ConnectionException {
     String query = "SELECT t_stamp, curr_location, user_id FROM positions WHERE user_id = ? AND t_stamp < ?";
     return this.fetch(user, query, upTo);
   }
 
   @Override
-  public List<Position> fetchInterval(User user, long start, long end) {
+  public List<Position> fetchInterval(User user, long start, long end) throws ConnectionException {
     String query = "SELECT t_stamp, curr_location, user_id FROM positions WHERE user_id = ? AND t_stamp > ? AND t_stamp < ?";
     return this.fetch(user, query, start, end);
   }
 
-  private List<Position> fetch(User user, String query, long... dates) {
+  private List<Position> fetch(User user, String query, long... dates) throws ConnectionException {
     List<Position> currPositions = new LinkedList<>();
 
     try (Connection connection = PostgresConnection.getConnection();
@@ -75,7 +82,7 @@ public class PostgresPositionDAO implements PositionsDAO {
       ps.setInt(1, user.getUid());
 
       for (int i = 0; i < dates.length; i++) {
-        ps.setLong(i + 1, dates[i]);
+        ps.setLong(i + 2, dates[i]);
       }
 
       try (ResultSet resultSet = ps.executeQuery()) {
@@ -86,7 +93,7 @@ public class PostgresPositionDAO implements PositionsDAO {
         }
       }
     } catch (SQLException e) {
-      throw new InternalServerErrorException();
+      throw new ConnectionException(e);
     }
     return currPositions;
   }
